Fix z-index of bug/boxing

--- a/scss/_bug.scss
+++ b/scss/_bug.scss
@@ -3,7 +3,8 @@ $logo-left: $main-margin;
 $logo-width: $logo-left + 7.75vw;
 
 #bug {
-    z-index: 2;
+    //z-index: 2;
+	position: absolute;
 
     > * {
 		@include bug-styling;
@@ -16,10 +17,10 @@ $logo-width: $logo-left + 7.75vw;
     #logo {
 		@include overlay($light-colour);
 		@include bug-round-right;
-		@include bug-transition(0s, 0.25s);
+		@include bug-transition($bug-transition-duration, 0s, 0.25s);
 
         width: $logo-width;
-        z-index: 2;
+        //z-index: 2;
 
         img {
             display: inline-block;
@@ -38,7 +39,7 @@ $logo-width: $logo-left + 7.75vw;
     .liveSegment {
 		@include overlay($colour-b);
 		@include bug-round-right;
-		@include bug-transition(0.5s, 0s);
+		@include bug-transition($bug-transition-duration, 0.5s, 0s);
 
 		transition:
 			opacity 0.5s $cubic-bezier,
@@ -50,7 +51,7 @@ $logo-width: $logo-left + 7.75vw;
         //padding-top: 0.1vw;
         width: 9vw;
         left: $logo-width - 2vw;
-        z-index: 1;
+        z-index: -1;
 
 		.liveSegmentText {
             transition: opacity .5s $cubic-bezier, transform .5s $cubic-bezier;
