--- a/scss/lowerThirds/_title.scss
+++ b/scss/lowerThirds/_title.scss
@@ -63,7 +63,7 @@ $lower-background-height: ($lower-third-height / 8) * 3;
 		&Background {
 			@extend %titleSegmentBackground !optional;
 			@include inverse-overlay($light-colour);
-			@include flip-down(0.75s, 0s);
+			@include flip-down(0.25s, 0.4s, 0s);
 
 			position: relative;
 			box-shadow: $lower-box-shadow;
