--- a/scss/varsity/_boxing.scss
+++ b/scss/varsity/_boxing.scss
@@ -4,16 +4,17 @@ $bout-left: 19vw;
 #boxingBug {
 	@include bug-round-right;
 	@include bug-round-left;
-	@include bug-transition(0s, 0.25s);
+	@include bug-transition($bug-transition-duration, 0s, 0.25s);
 	@include bug-styling;
 
 	@include overlay($light-colour);
 	color: $dark-colour;
 
-	z-index: 0;
+	position: absolute;
 
 	width: 29.5vw;
 	left: 20vw;
+	z-index: -1;
 
 
 	> * {
@@ -55,7 +56,7 @@ $bout-left: 19vw;
 		font-size: 2.2vw;
 		left: 6.2vw;
 		font-weight: 700;
-		z-index: 2;
+		z-index: -1;
 		color: $light-colour;
 	}
 
@@ -68,6 +69,6 @@ $bout-left: 19vw;
 		left: 2vw;
 		width: 11vw;
 		height: $bug-height;
-		z-index: 1;
+		z-index: -2;
 	}
 }
